change icon update

--- a/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
@@ -131,7 +131,7 @@
         ><i class="fa fa-eye" aria-hidden="true"></i>&nbsp;Chi tiết
         </button>
         <button mat-menu-item (click)="updateTransaction(transferId,txnId)"
-        ><i class="fa fa-eye" aria-hidden="true"></i>&nbsp;Cập nhập
+        ><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;Cập nhập tài khoản
         </button>
       </ng-template>
     </mat-menu>
