--- a/src/app/banks/card-bank-view/card-bank-view.component.html
+++ b/src/app/banks/card-bank-view/card-bank-view.component.html
@@ -11,7 +11,15 @@
   </div>
 
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-    <mat-card fxFlex="30%" style="display: flex; justify-content: center;" class="bank">
+    <mat-card
+      class="example-ripple-container mat-elevation-z4 bank"
+      matRipple
+      [matRippleCentered]="centered"
+      [matRippleDisabled]="disabled"
+      [matRippleUnbounded]="unbounded"
+      [matRippleRadius]="radius"
+      [matRippleColor]="color"
+      fxFlex="30%" style="display: flex; justify-content: center;" class="bank">
       <div style="margin-top: 10%;">
         <div fxLayout="row">
           <div fxFlex="40%">
@@ -24,7 +32,15 @@
         </div>
       </div>
     </mat-card>
-    <mat-card fxFlex="30%" *ngFor="let bank of dataStore" class="bank">
+    <mat-card
+      class="example-ripple-container mat-elevation-z4 bank"
+      matRipple
+      [matRippleCentered]="centered"
+      [matRippleDisabled]="disabled"
+      [matRippleUnbounded]="unbounded"
+      [matRippleRadius]="radius"
+      [matRippleColor]="color"
+      fxFlex="30%" *ngFor="let bank of dataStore" >
       <mat-card-header>
         <div mat-card-avatar class="example-header-image">
           <img *ngIf="bank.status==='O'" src="assets/images/icons/checked.svg">
