done màn hình: thêm bank + binCode

--- a/src/app/shared/form-dialog/formfield/formfield.component.html
+++ b/src/app/shared/form-dialog/formfield/formfield.component.html
@@ -1,16 +1,23 @@
 <div [formGroup]="form" fxFlexFill>
 
   <div *ngIf="formfield.controlType==='input' || formfield.controlType==='select'" fxFlexFill>
-    
+
     <mat-form-field fxFlexFill>
 
       <mat-label>{{ formfield.label }}</mat-label>
 
-      <input *ngIf="formfield.controlType==='input'" [type]="formfield.type" matInput
-        [formControlName]="formfield.controlName" [required]="formfield.required">
-
-      <mat-select *ngIf="formfield.controlType==='select'" [formControlName]="formfield.controlName"
-        [required]="formfield.required">
+      <input *ngIf="formfield.controlType==='input' && (!formfield.maxLength || formfield.maxLength===0)"
+             [type]="formfield.type" matInput
+             [formControlName]="formfield.controlName" [required]="formfield.required">
+      <input *ngIf="formfield.controlType==='input' && formfield.maxLength>0"
+             [maxlength]="formfield.maxLength"
+             [minlength]="formfield.minLength"
+             [type]="formfield.type" matInput
+             [formControlName]="formfield.controlName" [required]="formfield.required">
+      <mat-select *ngIf="formfield.controlType==='select'"
+                  [disabled]="formfield.disabled"
+                  [formControlName]="formfield.controlName"
+                  [required]="formfield.required">
         <mat-option *ngFor="let option of formfield.options.data" [value]="option[formfield.options.value]">
           {{ option[formfield.options.label] }}
         </mat-option>
@@ -26,8 +33,8 @@
 
   <mat-form-field fxFlexFill *ngIf="formfield.controlType==='datepicker'">
     <mat-label>{{ formfield.label }}</mat-label>
-    <input matInput [matDatepicker]="datePicker" [min]="formfield.minDate" [max]="formfield.maxDate"  
-      [formControlName]="formfield.controlName" [required]="formfield.required">
+    <input matInput [matDatepicker]="datePicker" [min]="formfield.minDate" [max]="formfield.maxDate"
+           [formControlName]="formfield.controlName" [required]="formfield.required">
     <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
     <mat-datepicker #datePicker></mat-datepicker>
     <mat-error *ngIf="form.controls[formfield.controlName].hasError('required')">
@@ -36,7 +43,7 @@
   </mat-form-field>
 
   <mat-checkbox *ngIf="formfield.controlType==='checkbox'" labelPosition="before" [checked]="formfield.value"
-    [formControlName]="formfield.controlName" [required]="formfield.required">
+                [formControlName]="formfield.controlName" [required]="formfield.required">
     {{ formfield.label }}
   </mat-checkbox>
 
