--- a/src/app/banks/banks/banks.component.html
+++ b/src/app/banks/banks/banks.component.html
@@ -1,64 +1,154 @@
-<mat-card class="container">
-
-  <div fxLayout="row wrap">
-      <mat-form-field fxFlex="88%">
+<mat-card class="container-custom">
+  <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+    <div fxFlex="20%" fxLayout="column">
+      <mat-form-field>
         <input matInput [placeholder]="'Search ...'"
                midasAfterValueChanged
                (delayedInput)="applyFilter($event.target.value)">
       </mat-form-field>
-  </div>
-
-  <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-    <mat-card
-      class="example-ripple-container mat-elevation-z4 bank"
-      matRipple
-      [matRippleCentered]="centered"
-      [matRippleDisabled]="disabled"
-      [matRippleUnbounded]="unbounded"
-      [matRippleRadius]="radius"
-      [matRippleColor]="color"
-      fxFlex="30%" style="display: flex; justify-content: center;" class="bank">
-      <div style="margin-top: 10%;">
-        <div fxLayout="row">
-          <div fxFlex="40%">
-            <img style="float: right;" src="assets/images/icons/add-bank.svg" width="50px" height="50px">
-          </div>
-          <div fxFlex="58%" fxLayout="column">
-            <h3 style="margin: 2px;">{{banks.length}}</h3>
-            <span>Thêm +</span>
-          </div>
-        </div>
+      <div fxLayout="column" class="banks">
+        <mat-card
+          class="example-ripple-container mat-elevation-z4 bank"
+          matRipple
+          [matRippleCentered]="centered"
+          [matRippleDisabled]="disabled"
+          [matRippleUnbounded]="unbounded"
+          [matRippleRadius]="radius"
+          [matRippleColor]="color"
+          [class.bank_active]="bank===bank_active"
+          *ngFor="let bank of dataStore"
+          (click)="setBank(bank)"
+        >
+          <mat-card-content>
+            <div fxLayout="row" style="display: flex;">
+              <img *ngIf="bank.status==='O'" src="assets/images/icons/checked.svg" width="20" height="20">
+              <img *ngIf="bank.status!=='O'" src="assets/images/icons/disabled.svg" width="20" height="20">
+              <h4 style="word-wrap: break-word; margin: 2px; padding: 2px;">{{bank.bankName}}</h4>
+            </div>
+          </mat-card-content>
+        </mat-card>
       </div>
-    </mat-card>
-    <mat-card
-      class="example-ripple-container mat-elevation-z4 bank"
-      matRipple
-      [matRippleCentered]="centered"
-      [matRippleDisabled]="disabled"
-      [matRippleUnbounded]="unbounded"
-      [matRippleRadius]="radius"
-      [matRippleColor]="color"
-      fxFlex="30%" *ngFor="let bank of dataStore" >
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image">
-          <img *ngIf="bank.status==='O'" src="assets/images/icons/checked.svg">
-          <img *ngIf="bank.status!=='O'" src="assets/images/icons/disabled.svg">
-        </div>
-        <mat-card-title>{{bank.bankName}}</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <span style="float: left; font-size: 16px; font-weight: inherit;">Code: {{bank.bankCode}}</span>
-        <div style="display: flex; justify-content: center; float: right;">
+      <mat-card
+        class="example-ripple-container mat-elevation-z4 bank"
+        matRipple
+        [matRippleCentered]="centered"
+        [matRippleDisabled]="disabled"
+        [matRippleUnbounded]="unbounded"
+        [matRippleRadius]="radius"
+        [matRippleColor]="color"
+        (click)="createBank()"
+        style="display: flex; background-color: #A9F5A9; justify-content: center;" class="bank">
+        <div>
           <div fxLayout="row">
-            <img src="assets/images/icons/credit-card.svg" width="40px" height="40px">
-            <div fxLayout="column">
-              <h4 style="margin: 2px;">{{bank.cards.length}}</h4>
-              <span>cards</span>
+            <div fxFlex="40%">
+              <img style="float: right;" src="assets/images/icons/add-bank.svg" width="50px" height="50px">
+            </div>
+            <div fxFlex="58%" fxLayout="column">
+              <h3 style="margin: 2px;">{{banks.length}}</h3>
+              <span>Thêm +</span>
             </div>
           </div>
         </div>
-      </mat-card-content>
-    </mat-card>
+      </mat-card>
+    </div>
+    <div fxFlex="78%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+      <mat-card *ngIf="!bank_active" style="width: 100%;">
+        <img src="assets/images/19197291.jpg" width="100%" height="80%">
+      </mat-card>
+      <mat-card [fxHide]="!bank_active" style="width: 100%;">
+        <mat-card-header>
+          <mat-card-title *ngIf="!edit_bank">
+            {{bank_active?.bankName}} [{{bank_active?.bankCode}}]
+          </mat-card-title>
+          <mat-form-field *ngIf="edit_bank" style="width: 80%;">
+            <input matInput placeholder="name"
+                   [formControl]="nameBank"
+            >
+          </mat-form-field>
+          <div *ngIf="!edit_bank" style="float: right; margin: 4px;">
+            <button
+              (click)="setEditBank()"
+              mat-raised-button>Edit
+            </button>
+          </div>
+          <div *ngIf="edit_bank" style="float: right; margin: 20px;" fxLayout="row">
+            <button
+              (click)="setEditBank()"
+              style="margin-right: 5px;"
+              mat-raised-button>Cancel
+            </button>
+            <button
+              (click)="saveBank()"
+              mat-raised-button color="primary">Save
+            </button>
+          </div>
+        </mat-card-header>
+        <mat-card-content [fxHide]="edit_bank">
+          <div>
+            <div fxLayout="row swap" fxLayout.lt-md="column">
+              <mat-form-field fxFlex="75%">
+                <input matInput [placeholder]="'Search ...'"
+                       midasAfterValueChanged
+                       (delayedInput)="applyFilterCard($event.target.value)">
+              </mat-form-field>
+              <div fxFlex="20%">
+                <button
+                  (click)="createOrEditCard(null)"
+                  mat-raised-button style="margin: 10px;" color="primary">Thêm +
+                </button>
+              </div>
+            </div>
+            <table class="mat-elevation-z8" mat-table [dataSource]="getDataSourceCard()" matSort multiTemplateDataRows>
+
+              <!-- External ID Column -->
+              <ng-container matColumnDef="refid">
+                <th mat-header-cell *matHeaderCellDef
+                    mat-sort-header='refid'>ID
+                </th>
+                <td mat-cell *matCellDef="let row"> {{row.refid}} </td>
+              </ng-container>
+
+              <!-- Name Column -->
+              <ng-container matColumnDef="binCode">
+                <th mat-header-cell *matHeaderCellDef
+                    mat-sort-header='binCode'>Bin Code
+                </th>
+                <td mat-cell *matCellDef="let row"> {{row.binCode}} </td>
+              </ng-container>
+
+              <!-- Account no Column -->
+              <ng-container matColumnDef="cardType">
+                <th mat-header-cell *matHeaderCellDef
+                    mat-sort-header='cardType'>Loại
+                </th>
+                <td mat-cell *matCellDef="let row"> {{getCardTypeName(row.cardType)}} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="edit" style="width: 60px;">
+                <th mat-header-cell *matHeaderCellDef>Edit</th>
+                <td mat-cell *matCellDef="let row">
+                  <button mat-raised-button
+                          (click)="createOrEditCard(row)"
+                  >
+                    <img src="assets/images/icons/edit.svg" width="20px" height="20px">
+                  </button>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+                  class="example-element-row">
+              </tr>
+            </table>
+
+            <mat-paginator [length]="cards_active?.length" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"
+                           showFirstLastButtons></mat-paginator>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+
   </div>
 
 </mat-card>
