Fix some error and refactor bankService
- add log debug to APi and Authen service
- fix file path error in ScSS file
- Load bincode and bank data on the Init stage of app.

--- a/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
+++ b/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Add Client Identifier</h1>
+<h1 mat-dialog-title>{{'Client_Component.ViewClient.TabIdentities.dialogIdentifierTitle' |translate}}</h1>
 
 <div mat-dialog-content [formGroup]="form" [fxLayout]="'column'" fxLayout.lt-md="column" [fxLayoutGap]="'1%'"
      fxLayoutGap.lt-md="0%">
