--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -19,25 +19,26 @@
       <fa-icon class="mr-05" icon="university" size="lg"></fa-icon>
       {{ "Toolbar_Component.labelInstitution" | translate }}
     </a>
-
+    <!-- Menu danh cho các user Admin -->
     <span *midasHasPermission="'ALL_FUNCTIONS'" fxHide.lt-lg="true">
-      <!-- <a mat-tab-link class="tab-link" [routerLink]="['/accounting']">
+       <a mat-tab-link class="tab-link" [routerLink]="['/accounting']">
         <fa-icon class="mr-05" icon="money-bill-alt" size="lg"></fa-icon>
         {{ "Toolbar_Component.lblAccounting" | translate }}
-      </a> -->
-      <!-- <a mat-tab-link class="tab-link" [matMenuTriggerFor]="reportsMenu" #reportsMenuTrigger="matMenuTrigger">
+      </a> 
+      <a mat-tab-link class="tab-link" [matMenuTriggerFor]="reportsMenu" #reportsMenuTrigger="matMenuTrigger">
         <fa-icon class="mr-05" icon="chart-bar" size="lg"></fa-icon>
         {{ "Toolbar_Component.lblReport" | translate }}
-      </a> -->
-      <!-- <a mat-tab-link class="tab-link" [matMenuTriggerFor]="adminMenu" #adminMenuTrigger="matMenuTrigger">
+      </a>
+      <a mat-tab-link class="tab-link" [matMenuTriggerFor]="adminMenu" #adminMenuTrigger="matMenuTrigger">
         <fa-icon class="mr-05" icon="shield-alt" size="lg"></fa-icon>
         {{ "Toolbar_Component.lblAdmin" | translate }}
       </a>
       <a mat-tab-link class="tab-link" [matMenuTriggerFor]="selfServiceMenu" #selfServiceMenuTrigger="matMenuTrigger">
         <fa-icon class="mr-05" icon="users" size="lg"></fa-icon>
         {{ "Toolbar_Component.lblSelfService" | translate }}
-      </a> -->
+      </a> 
     </span>
+    <!-- Menu danh cho các user Admin -->
     <a mat-tab-link class="tab-link" [matMenuTriggerFor]="POSPartnerMenu" #institutionMenuTrigger="matMenuTrigger">
       <fa-icon class="mr-05" icon="university" size="lg"></fa-icon>
       Máy POS và đối tác
@@ -81,9 +82,9 @@
 <mat-menu #institutionMenu="matMenu" [overlapTrigger]="false">
   <button mat-menu-item routerLink="/clients">{{ "Toolbar_Component.lblClient" | translate }}</button>
   <button mat-menu-item routerLink="/groups">{{ "Toolbar_Component.lblGroup" | translate }}</button>
-  <button mat-menu-item routerLink="/centers">Centers</button>
+  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'"routerLink="/centers">Centers</button>
   <button mat-menu-item routerLink="/accounts/balance-clients">{{ "Quản lý số dư khách hàng" | translate }}</button>
-  <button mat-menu-item routerLink="/accounts/balance-teller">{{ "Quản lý số dư teller" | translate }}</button>
+  <button mat-menu-item *midasHasPermission="'MANAGER' || 'ALL_FUNCTIONS'" routerLink="/accounts/balance-teller">{{ "Quản lý số dư teller" | translate }}</button>
 
   <!-- <span fxHide.lg>
     <button mat-menu-item [routerLink]="['/accounting']">{{ "Toolbar_Component.lblAccounting" | translate }}</button>
@@ -100,8 +101,8 @@
     {{ "Toolbar_Component.labelTerminals" | translate }}
   </button>
   <button mat-menu-item routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" | translate }}</button>
-  <button mat-menu-item routerLink="/terminals">{{ "Quản lý máy POS" | translate }}</button>
-  <button mat-menu-item routerLink="/third-party">{{'Toolbar_Component.lblThirdParty'|translate}}</button>
+  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'" routerLink="/terminals">{{ "Quản lý máy POS" | translate }}</button>
+  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'" routerLink="/third-party">{{'Toolbar_Component.lblThirdParty'|translate}}</button>
 </mat-menu>
 <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false">
   <button mat-menu-item routerLink="/transaction">Quản lý giao dịch</button>
