--- a/src/theme/fontawesome/scss/brands.scss
+++ b/src/theme/fontawesome/scss/brands.scss
@@ -9,12 +9,12 @@
   font-style: normal;
   font-weight: 400;
   font-display: $fa-font-display;
-  src: url('#{$fa-font-path}/fa-brands-400.eot');
-  src: url('#{$fa-font-path}/fa-brands-400.eot?#iefix') format('embedded-opentype'),
-  url('#{$fa-font-path}/fa-brands-400.woff2') format('woff2'),
-  url('#{$fa-font-path}/fa-brands-400.woff') format('woff'),
-  url('#{$fa-font-path}/fa-brands-400.ttf') format('truetype'),
-  url('#{$fa-font-path}/fa-brands-400.svg#fontawesome') format('svg');
+  src: url('../webfonts/fa-brands-400.eot');
+  src: url('../webfonts/fa-brands-400.eot?#iefix') format('embedded-opentype'),
+  url('../webfonts/fa-brands-400.woff2') format('woff2'),
+  url('../webfonts/fa-brands-400.woff') format('woff'),
+  url('../webfonts/fa-brands-400.ttf') format('truetype'),
+  url('../webfonts/fa-brands-400.svg#fontawesome') format('svg');
 }
 
 .fab {
