Add View/Create Card extro info w.o Update
- Đã cập nhật lại phần add và view thông tin bổ sung của thẻ (Ngày đến hạn/ Ngày hết hạn thẻ)

- Khoa xử lý giúp anh phần cập nhật thông tin bổ sung của thẻ nha

--- a/src/app/clients/clients-view/identities-tab/add-identities-extra-info/add-identities-extra-info.component.html
+++ b/src/app/clients/clients-view/identities-tab/add-identities-extra-info/add-identities-extra-info.component.html
@@ -29,5 +29,5 @@
   <button mat-raised-button mat-dialog-close>{{ 'Shared_Component.FormDialog.btnCancel' | translate }}</button>
   <button mat-raised-button color="primary"
           [mat-dialog-close]="{ data: form,documentTypes:documentTypes,existBin:existBin }"
-          [disabled]="!form.valid || form.pristine">{{ 'Shared_Component.FormDialog.btnAdd' |translate }}</button>
+          [disabled]="!form.valid || form.pristine">{{ (this.data.cardinfo)?'Sửa':'Shared_Component.FormDialog.btnAdd' |translate }}</button>
 </mat-dialog-actions>
