--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -356,7 +356,7 @@
       <button mat-menu-item
               (click)="addPosInformation(trnRefNo,batchNo,traceNo)"
       >
-        <img src="assets/images/icons/add.svg"/>&nbsp;Thêm thông tin POS
+        <img src="assets/images/icons/add.svg"/>&nbsp;Thông tin bill nhiệt
       </button>
       <button mat-menu-item
               *ngIf="status != 'V'"
